[gd_scene load_steps=5 format=3 uid="uid://b461mwdlkvram"]

[ext_resource type="Script" uid="uid://dwbxkgsbknivq" path="res://BattleScene.gd" id="1_hvnqj"]
[ext_resource type="Texture2D" uid="uid://b8ugrrt2bhev5" path="res://art/Gallo-PNG-Pic.png" id="2_musxc"]
[ext_resource type="Texture2D" uid="uid://cmyi6da1curq5" path="res://art/a97743bfab2839b35c5a91f670342691-removebg-preview.png" id="3_hvnqj"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hvnqj"]

[node name="Node2D" type="Node2D"]
position = Vector2(343, 222)
script = ExtResource("1_hvnqj")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("CanvasItemMaterial_hvnqj")
offset_left = -219.0
offset_top = -126.0
offset_right = 242.0
offset_bottom = 118.0
color = Color(0.270222, 0.270222, 0.270222, 1)
metadata/_edit_use_anchors_ = true

[node name="Gallo1" type="Sprite2D" parent="."]
position = Vector2(-121, 12)
scale = Vector2(0.504, 0.490991)
texture = ExtResource("2_musxc")

[node name="Gallo2" type="Sprite2D" parent="."]
position = Vector2(137, 12)
scale = Vector2(0.647059, 0.617857)
texture = ExtResource("3_hvnqj")

[node name="ResultLabel" type="Label" parent="."]
offset_left = -48.0
offset_top = -121.0
offset_right = 49.0
offset_bottom = -71.0
horizontal_alignment = 1
autowrap_mode = 1

[node name="BetA" type="Button" parent="."]
offset_left = -161.0
offset_top = -111.0
offset_right = -83.0
offset_bottom = -80.0
text = "Bet on A!"
metadata/_edit_use_anchors_ = true

[node name="BetB" type="Button" parent="."]
offset_left = 107.0
offset_top = -116.0
offset_right = 185.0
offset_bottom = -85.0
text = "Bet on B!"
metadata/_edit_use_anchors_ = true

[node name="Back" type="Button" parent="."]
offset_left = -43.0
offset_top = 122.0
offset_right = 72.0
offset_bottom = 153.0
text = "Back to menu"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="BetA" to="." method="_on_BetOnAButton_pressed"]
[connection signal="pressed" from="BetB" to="." method="_on_BetOnBButton_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_BackButton_pressed"]
